--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
   shared_preferences: ^2.5.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +30,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - assets/bookpic.jpg
 
     
     
