--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   shared_preferences: ^2.5.2
   uuid: ^4.5.1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
