--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.5.2
   uuid: ^4.5.1
   http: ^1.4.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
