--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,20 @@ dependencies:
   http: ^1.4.0
   http_parser: ^4.1.2
 
+
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"  
+  
+
 
 flutter:
   uses-material-design: true
