--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:label="Borrow Booksy"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        android:allowBackup="false"
+        android:allowFullBackup="false"
         <activity
             android:name=".MainActivity"
             android:exported="true"
